--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,6 @@ theme: just-the-docs
 
 nav_order:
   - index.md   # Or "home.md" if you created it as a separate page
+  - Research.md
   - teaching.md
+  - Notes.md
